<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:id="@+id/cart_main_containerP"
    tools:context=".ActivitiesAndFragments.FragmentMquevacomprar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:text="¿A donde vamos por tu pedido?"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20dp"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/backinputs"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:drawableLeft="@drawable/ic_baseline_location_on_24"
                    android:hint="@string/ingresa_direccion"
                    android:gravity="top"
                    android:layout_margin="5dp"
                    android:background="@drawable/backinputs3"
                    android:id="@+id/cart_address_divP">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_baseline_location_on_24"
                        android:layout_marginEnd="15dp"
                        android:layout_alignParentStart="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="25dp"
                        android:text="@string/select_delivery_address"
                        android:id="@+id/delivery_address_tvP"
                        android:layout_toStartOf="@+id/rightArrow"
                        android:layout_alignParentStart="true"
                        android:singleLine="true"
                        />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="18dp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/right_arrow"
                        android:layout_marginEnd="15dp"
                        android:id="@+id/rightArrow"
                        android:layout_alignParentEnd="true"/>


                </RelativeLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:drawableLeft="@drawable/ic_baseline_home_24"
                    android:hint="@string/edittext_hintRef"
                    android:gravity="top"
                    android:layout_margin="5dp"
                    android:padding="2dp"
                    android:background="@drawable/backinputs3" />

            </LinearLayout>



            <EditText
                android:layout_marginTop="10dp"
                android:hint="@string/instrucciones_adicionales"
                android:background="#eeeeee"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:gravity="top"
                android:layout_height="200dp"/>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/round_shape_btn_login"
        android:id="@+id/btnQueVacomprar"
        android:layout_margin="10dp"
        android:layout_marginBottom="0dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:layout_centerInParent="true"
            android:textColor="@color/colorWhite"
            android:id="@+id/cart_btn_text"
            />



    </RelativeLayout>



</RelativeLayout>