<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitiesAndFragments.FragmentAdondeloLlevamos">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:text="¿Que necesitas que compremos?"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/textAdondelollevamos"
                />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/backinputs"
                android:orientation="vertical">



                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edittext_hintPro"
                    android:gravity="top"
                    android:layout_margin="5dp"
                    android:padding="2dp"
                    android:background="@drawable/backinputs3" />

            </LinearLayout>

            <EditText
                android:layout_marginTop="10dp"
                android:hint="@string/instrucciones_adicionales"
                android:background="#eeeeee"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:gravity="top"
                android:layout_height="200dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_margin="5dp"
                    android:text="Añadir producto"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#f9b235"
                    android:textSize="30dp"
                    android:layout_height="wrap_content"
                    android:text="+"/>

            </LinearLayout>
    </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/round_shape_btn_login"
        android:id="@+id/btnAdondeLollevamos"
        android:layout_margin="10dp"
        android:layout_marginBottom="0dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Siguiente"
            android:layout_centerInParent="true"
            android:textColor="@color/colorWhite"
            android:id="@+id/cart_btn_text"
            />



    </RelativeLayout>





</RelativeLayout>